fix: chang gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -96,9 +96,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-
-
-    gap: 10px;
+    gap: 5px;
 
 
 }
@@ -109,8 +107,7 @@ a {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: auto;
-    gap: 20px;
-
+    gap: 5px;
     background-color: #f0f0f00c;
     border: 2px rgba(146, 58, 131, 0.22) solid;
     border-radius: 10px;
